--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,11 @@
+2016-12-19  Ville Voutilainen  <ville.voutilainen@gmail.com>
+
+	Make the perfect-forwarding constructor of a two-element tuple
+	sfinae away when the first argument is an allocator_arg.
+	* include/std/tuple (tuple(_U1&&, _U2&&)): Constrain.
+	* testsuite/20_util/tuple/cons/allocator_with_any.cc: New.
+	* testsuite/20_util/tuple/element_access/get_neg.cc: Adjust.
+
 2016-12-16  Jonathan Wakely  <jwakely@redhat.com>
 
 	* include/bits/stl_map.h (map::erase(iterator)): Add Doxygen markup
