* Makefile.am: Remove intrinsics/bit_intrinsics.c. 	* Makefile.in: Regenerate. 	* gfortran.map: Remove _gfortran_clz128 and _gfortran_ctz128. 	* intrinsics/bit_intrinsics.c: Remove.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@243800 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libgfortran/ChangeLog
+++ b/libgfortran/ChangeLog
@@ -1,3 +1,10 @@
+2016-12-19  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>
+
+	* Makefile.am: Remove intrinsics/bit_intrinsics.c.
+	* Makefile.in: Regenerate.
+	* gfortran.map: Remove _gfortran_clz128 and _gfortran_ctz128.
+	* intrinsics/bit_intrinsics.c: Remove.
+
 2016-12-19  Janne Blomqvist  <jb@gcc.gnu.org>
 
 	* Makefile.am: Remove exponent, fraction, nearest, rrspacing,
