* trans.h: Remove gfor_fndecl_stop_numeric_f08. 	* trans-decl.c: Remove gfor_fndecl_stop_numeric_f08. 	* trans-stmt.c (gfc_trans_stop): Use gfor_fndecl_stop_numeric 	instead of gfor_fndecl_stop_numeric_f08.
	* gfortran.map: Remove _gfortran_stop_numeric_f08.
	* runtime/stop.c: Rename stop_numeric_f08 into stop_numeric.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@243803 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/fortran/ChangeLog
+++ b/gcc/fortran/ChangeLog
@@ -1,3 +1,10 @@
+2016-12-19  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>
+
+	* trans.h: Remove gfor_fndecl_stop_numeric_f08.
+	* trans-decl.c: Remove gfor_fndecl_stop_numeric_f08.
+	* trans-stmt.c (gfc_trans_stop): Use gfor_fndecl_stop_numeric
+	instead of gfor_fndecl_stop_numeric_f08.
+
 2016-12-19  Janus Weil  <janus@gcc.gnu.org>
 
 	PR fortran/78545
