2016-12-19  Will Schmidt  <will_schmidt@vnet.ibm.com>
        * config/rs6000/rs6000.c (rs6000_gimple_fold_builtin): Add handling for
        early expansion of vector subtract builtins.
    
[gcc/testsuite]

2016-12-19  Will Schmidt  <will_schmidt@vnet.ibm.com>

      * gcc.target/powerpc/fold-vec-sub-char.c: New.
      * gcc.target/powerpc/fold-vec-sub-float.c: New.
      * gcc.target/powerpc/fold-vec-sub-floatdouble.c: New.
      * gcc.target/powerpc/fold-vec-sub-int.c: New.
      * gcc.target/powerpc/fold-vec-sub-int128.c: New.
      * gcc.target/powerpc/fold-vec-sub-longlong.c: New.
      * gcc.target/powerpc/fold-vec-sub-short.c: New.




git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@243806 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,13 @@
+2016-12-19  Will Schmidt  <will_schmidt@vnet.ibm.com>
+ 
+	* gcc.target/powerpc/fold-vec-sub-char.c: New.
+	* gcc.target/powerpc/fold-vec-sub-float.c: New.
+	* gcc.target/powerpc/fold-vec-sub-floatdouble.c: New.
+	* gcc.target/powerpc/fold-vec-sub-int.c: New.
+	* gcc.target/powerpc/fold-vec-sub-int128.c: New.
+	* gcc.target/powerpc/fold-vec-sub-longlong.c: New.
+	* gcc.target/powerpc/fold-vec-sub-short.c: New.
+
 2016-12-19  Dominik Vogt  <vogt@linux.vnet.ibm.com>
 
 	PR target/78748
