--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2016-12-19  Will Schmidt  <will_schmidt@vnet.ibm.com>
+
+	* config/rs6000/rs6000.c (rs6000_gimple_fold_builtin): Add handling for
+	early expansion of vector subtract builtins.
+
 2016-12-19  Chenghua Xu  <paul.hua.gm@gmail.com>
 
 	* MAINTAINERS (Write After Approval): Add myself.
