2016-12-19  Will Schmidt  <will_schmidt@vnet.ibm.com>
        *  config/rs6000/rs6000.c: Add handling for early expansion of
        vector multiply builtins.
    
[gcc/testsuite]

2016-12-19  Will Schmidt  <will_schmidt@vnet.ibm.com>

        *  gcc.dg/vmx/mult-even-odd-be-order.c : Mark
        variables as volatile.
        *  gcc.target/powerpc/fold-vec-mult-char.c : New.
        *  gcc.target/powerpc/fold-vec-mult-float.c : New.
        *  gcc.target/powerpc/fold-vec-mult-floatdouble.c : New.
        *  gcc.target/powerpc/fold-vec-mult-int.c : New.
        *  gcc.target/powerpc/fold-vec-mult-int128-p8.c : New.
        *  gcc.target/powerpc/fold-vec-mult-int128-p9.c : New.
        *  gcc.target/powerpc/fold-vec-mult-longlong.c : New.
        *  gcc.target/powerpc/fold-vec-mult-short.c : New.




git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@243807 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,4 +1,17 @@
 2016-12-19  Will Schmidt  <will_schmidt@vnet.ibm.com>
+
+	*  gcc.dg/vmx/mult-even-odd-be-order.c: Mark
+	variables as volatile.
+	*  gcc.target/powerpc/fold-vec-mult-char.c: New.
+	*  gcc.target/powerpc/fold-vec-mult-float.c: New.
+	*  gcc.target/powerpc/fold-vec-mult-floatdouble.c: New.
+	*  gcc.target/powerpc/fold-vec-mult-int.c: New.
+	*  gcc.target/powerpc/fold-vec-mult-int128-p8.c: New.
+	*  gcc.target/powerpc/fold-vec-mult-int128-p9.c: New.
+	*  gcc.target/powerpc/fold-vec-mult-longlong.c: New.
+	*  gcc.target/powerpc/fold-vec-mult-short.c: New.
+
+2016-12-19  Will Schmidt  <will_schmidt@vnet.ibm.com>
  
 	* gcc.target/powerpc/fold-vec-sub-char.c: New.
 	* gcc.target/powerpc/fold-vec-sub-float.c: New.
