* trans-decl.c (create_main_function): Remove unused elements to 	the set_options call.
	* runtime/compile_options.c (set_options): Remove unused elements.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@243814 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/fortran/ChangeLog
+++ b/gcc/fortran/ChangeLog
@@ -1,5 +1,10 @@
 2016-12-19  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>
 
+	* trans-decl.c (create_main_function): Remove unused elements to
+	the set_options call.
+
+2016-12-19  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>
+
 	* trans.h: Remove gfor_fndecl_stop_numeric_f08.
 	* trans-decl.c: Remove gfor_fndecl_stop_numeric_f08.
 	* trans-stmt.c (gfc_trans_stop): Use gfor_fndecl_stop_numeric
