2016-12-20  Richard Biener  <rguenther@suse.de>
	* passes.c (execute_one_pass): Handle going out of SSA w/o
	hitting pass_startwith.  Handle skipping property providers.

	* gcc.dg/gimplefe-19.c: New testcase.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@243822 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2016-12-20  Richard Biener  <rguenther@suse.de>
+
+	* gcc.dg/gimplefe-19.c: New testcase.
+
 2016-12-20  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
 
 	PR target/78694
