* gcc.dg/tls/alias-1.c: dg-add-options tls.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@243827 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2016-12-20  David Edelsohn  <dje.gcc@gmail.com>
+
+	* gcc.dg/tls/alias-1.c: dg-add-options tls.
+
 2016-12-20  Andre Vieira  <andre.simoesdiasvieira@arm.com>
 
 	* gcc.target/arm/pr78255-2.c: Fix to work for targets
