--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,6 +1,7 @@
 2016-12-20  David Edelsohn  <dje.gcc@gmail.com>
 
 	* gcc.dg/tls/alias-1.c: dg-add-options tls.
+	* gcc.dg/pr70859-2.c: Define _ISOC99_SOURCE on AIX.
 
 2016-12-20  Andre Vieira  <andre.simoesdiasvieira@arm.com>
 
