2016-12-22  Andrew Pinski  <apinski@cavium.com> 	    Naveen H.S <Naveen.Hurugalawadi@cavium.com>
gcc
        * match.pd (max:c @0 (plus@2 @0 INTEGER_CST@1)): New Pattern.
	(min:c @0 (plus@2 @0 INTEGER_CST@1)) : New Pattern.
gcc/testsuite
	* gcc.dg/max.c: New Testcase.
	* gcc.dg/min.c: New Testcase.



git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@243838 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2016-12-22  Andrew Pinski  <apinski@cavium.com>
+
+        * match.pd (max:c @0 (plus@2 @0 INTEGER_CST@1)): New Pattern.
+	(min:c @0 (plus@2 @0 INTEGER_CST@1)) : New Pattern.
+
 2016-12-20  James Greenhalgh  <james.greenhalghj@arm.com>
 
 	* common.opt (excess_precision): Tag as SetByCombined.
