--- a/libgfortran/ChangeLog
+++ b/libgfortran/ChangeLog
@@ -1,3 +1,9 @@
+2016-12-21  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>
+
+	* gfortran.map: Move all _gfortran_* __iso_c_binding_* symbols
+	to GFORTRAN_7. Rename F2C_1.0 to GFORTRAN_F2C_7. Move all C99
+	compatibility symbols to GFORTRAN_C99_7.
+
 2016-12-19  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>
 
 	* runtime/compile_options.c (set_options): Remove unused elements.
