--- a/gcc/fortran/ChangeLog
+++ b/gcc/fortran/ChangeLog
@@ -1,3 +1,9 @@
+2016-12-21  Janne Blomqvist  <jb@gcc.gnu.org>
+
+	PR fortran/78867
+	* trans-expr.c (gfc_conv_procedure_call): Emit DECL_EXPR also for
+	non-pointer character results.
+
 2016-12-21  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>
 
 	* iresolve.c (gfc_resolve_ftell): Call "ftell" instead of "ftell2".
