MIPS: Relax instruction order check in msa-builtins.c.
gcc/testsuite

	* gcc.target/mips/msa-builtins.c (msa_insert_d): Tweak expected output.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@243848 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2016-12-21  Toma Tabacu  <toma.tabacu@imgtec.com>
+
+	* gcc.target/mips/msa-builtins.c (msa_insert_d): Tweak expected output.
+
 2016-12-21  Janne Blomqvist  <jb@gcc.gnu.org>
 
 	PR fortran/78867
