--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2016-12-21  Jakub Jelinek  <jakub@redhat.com>
+
+	* configure.ac: Don't bootstrap libmpx unless --with-build-config
+	includes bootstrap-mpx.
+	* configure: Regenerated.
+
 2016-12-19  Chenghua Xu  <paul.hua.gm@gmail.com>
 
 	* MAINTAINERS (Write After Approval): Add myself.
