--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2016-12-21  Alexander Monakov  <amonakov@ispras.ru>
+
+	* gcc.target/nvptx/decl-shared.c (v_common): Add 'common' attribute to
+	explicitly request the desired storage class.
+
 2016-12-21  Georg-Johann Lay  <avr@gjlay.de>
 
 	PR testsuite/52641
