Do not suggest -fsanitize=all (PR driver/78863).
	PR driver/78863
	* gcc.c (driver::build_option_suggestions): Do not add
	-fsanitize=all as a suggestion candidate.
	PR driver/78863
	* gcc.dg/spellcheck-options-13.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@243857 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2016-12-21  Jakub Jelinek  <jakub@redhat.com>
+	    Martin Liska  <mliska@suse.cz>
+
+	PR driver/78863
+	* gcc.c (driver::build_option_suggestions): Do not add
+	-fsanitize=all as a suggestion candidate.
+
 2016-12-21  Alexander Monakov  <amonakov@ispras.ru>
 
 	PR target/78831
