--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2016-12-21  Andre Vieira  <andre.simoesdiasvieira@arm.com>
+
+	* gcc.target/arm/unsigned-extend-2.c: Update testcase.
+
 2016-12-21  Martin Liska  <mliska@suse.cz>
 
 	PR driver/78863
